know the challenge desktop version

--- a/index.html
+++ b/index.html
@@ -58,9 +58,27 @@
                
  
         <h1>da Rescue Team</h1>
-        <p class="motto">Is your project <span>in danger</span>?</p>
+        <p class="motto">Working on a project in need of <span>intensive care</span></p>
         <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
 
+    </div>
+    <div id="rescue">
+    <div class="title">
+            <h2>Know the challenge</h2>
+        </div>
+        <div class="pure-g-r">
+        <div class="pure-u-1">
+            <div class="l-box statement">
+                <span id="typewriter" class="typewriter"></span>
+                <span class="caret">&nbsp;</span>
+            </div>
+        </div>
+        <div class="pure-u-1">
+            <div class="l-box joy">
+            <p>The joy of <strong>testing</strong> and <strong>refactoring</strong></p>
+            </div>
+        </div>
+        </div>
     </div>
 
     <div id="team">
@@ -155,5 +173,7 @@
     </div>
 
 </div>
+<script type="text/javascript" src="js/realistic-typewriter.js"></script>
+<script type="text/javascript" src="js/rescue.js"></script>
 </body>
 </html>
