--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>da Rescue Team</title>
-    <script src="js/jquery.min.js"></script>
+    <script src="js/domo.js"></script>
     <link rel="stylesheet" href="css/base-min.css">
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -22,7 +22,7 @@
         <script>
 
             setTimeout(function(){
-                var feed = $('#twitter-widget-0').contents().find('.h-feed')[0];
+                var feed = document.querySelector('#twitter-widget-0').contentDocument.querySelector('.h-feed');
                 var tweets = feed.querySelectorAll('.tweet');
                 var tuits = [];
                 for(var i=0;i < tweets.length; i++){
@@ -35,18 +35,32 @@
                 }
 
                 var maxtuits = (tuits.length > 6)?6:tuits.length;
-                $('#timeline').html('');
+                var timeline = document.querySelector('#timeline');
+                timeline.innerHTML = '';
                 for(var i=0;i<maxtuits;i++){
-                    var markup = '<div class="pure-u-1-3"><div class="l-box"><p class="tweet"><i class="icon-quote-left"></i> __tweet__ <i class="icon-quote-right"></i></p><div class="pure-u-1-2 when">__when__</div><div class="pure-u-1-2 link"><a href="__link__" target="_blank"><i class="icon-twitter"></i> View<a></div></div></div>';
-                    markup = markup.replace('__tweet__', tuits[i].text);
+                    //var markup = document.createDocumentFragment();
                     var when = '';
                     if (!isNaN(tuits[i].when.getTime())) {
                         when = tuits[i].when.toDateString();
                     }
-                    markup = markup.replace('__when__', when);
-                    markup = markup.replace('__link__', tuits[i].link);
-
-                    $('#timeline').append($(markup));
+                   
+                    var markup = DIV({'class':'pure-u-1-3'},
+                                DIV({'class':'l-box'},
+                                  P({'class':'tweet'}, 
+                                    I({'class':'icon-quote-left'}),
+                                    tuits[i].text,
+                                    I({'class':'icon-quote-right'})
+                                    ),
+                                  DIV({'class':'pure-u-1-2 when'}, when),
+                                  DIV({'class':'pure-u-1-2 link'}, 
+                                    A({'href':tuits[i].link, 'target':'_blank'},
+                                        I({'class':'icon-twitter'}),
+                                        "View"
+                                        )
+                                    )
+                                )
+                            );
+                    timeline.appendChild(markup);
                 }
             }, 5000);
 
@@ -58,7 +72,7 @@
                
  
         <h1>da Rescue Team</h1>
-        <p class="motto">Working on a project in need of <span>intensive care</span></p>
+        <p class="motto"><span>Intensive care</span> for software</p>
         <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
 
     </div>
@@ -170,6 +184,32 @@
                 </button>
             </a>
         </div>
+    </div>
+
+    <div id="contact">
+        <div class="title">
+            <h2>Know us better</h2>
+        </div>
+        <div class="pure-g-r">
+        <div class="pure-u-1">
+            <div class="l-box joy one">
+            <p>We become the most <strong>concerned</strong> people with the problems</p>
+            <p>We liaise shoulder by shoulder with <strong>managers</strong> and <strong>developers</strong></p>
+            <p>We love the <strong>business</strong> as much as the <strong>software</strong></p>
+            </div>
+            <div class="l-box joy two">
+            <p>We become the most <strong>concerned</strong> people with the problems</p>
+            <p>We liaise shoulder by shoulder with <strong>managers</strong> and <strong>developers</strong></p>
+            <p>We love the <strong>business</strong> as much as the <strong>software</strong></p>
+            </div>
+        </div>
+        <div class="pure-u-1">
+            <div class="l-box joy">
+            <p class="further">For further info, send us a <span class="badge">mail</span> to <span class="mail">darescueteam at gmail dot com<span></p>
+            </div>
+        </div>
+        </div>
+
     </div>
 
 </div>
