--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="main">
 
-       <div id="one">
+       <div id="one" class="section white">
         <script src="js/twitter.js"></script>
         <img src="img/redcross.png" id="bg"/>
         <h1>da Rescue Team</h1>
@@ -27,7 +27,7 @@
         <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
 
     </div>
-    <div id="rescue">
+    <div id="rescue" class="section dark">
     <div class="title">
             <h2>Know the challenge</h2>
         </div>
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <div id="team">
+    <div id="team" class="section grey">
      <div class="title">
             <h2>Meet the team</h2>
         </div>
@@ -111,7 +111,7 @@
 
     </div>
 
-    <div id="tweets">
+    <div id="tweets" class="section dark">
 
         <div class="title">
             <h2>Hear what we say</h2>
@@ -127,7 +127,7 @@
         </div>
 
 
-        <div class="center margin-20">
+        <div class="center padding-20">
             <script src="https://platform.twitter.com/widgets.js"></script>
             <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=daRescueTeam&tw_p=followbutton&variant=2.0">
                 <button class="pure-button">
@@ -137,7 +137,7 @@
         </div>
     </div>
 
-    <div id="contact">
+    <div id="contact" class="section white">
         <div class="title">
             <h2>Know us better</h2>
         </div>
