twitter bio updated

--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
             <h2>Meet the team</h2>
         </div>
         <div class="pure-g-r">
+
             <div class="pure-u-1-4">
                 
                 <div class="member">
                     <div class="header">
-                        <img src="https://pbs.twimg.com/profile_images/665888025/calavera.jpg"/>
-                        <h3>Miguel Angel ~ Mike<h3>
+                        <img src="https://pbs.twimg.com/profile_images/1416145378/badguy.jpg"/>
+                        <h3>Jesus Jimenez ~ Ballano<h3>
                     </div>
                     <div class="description">
-                        software developer
+                        World citizen and software developer.
                     </div>
                 </div>
 
@@ -73,7 +74,7 @@
                         <h3>Jorge Jimenez ~ Semurat<h3>
                     </div>
                     <div class="description">
-                        Gigoló del código con Tests, ante todo código sano y limpio
+                        Software Developer, husband, father, diabetic... a man in the universe.
                     </div>
                 </div>
 
@@ -83,11 +84,11 @@
                 
                 <div class="member">
                     <div class="header">
-                        <img src="https://pbs.twimg.com/profile_images/1416145378/badguy.jpg"/>
-                        <h3>Jesus Jimenez ~ Ballano<h3>
+                        <img src="https://pbs.twimg.com/profile_images/665888025/calavera.jpg"/>
+                        <h3>Miguel Angel ~ Mike<h3>
                     </div>
                     <div class="description">
-                        World citizen and software developer. Uno más de @BeCodeMyFriend
+                        Software developer.
                     </div>
                 </div>
 
