css file reordered and css classnames refactored

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 
    
-       <div id="one" class="section white">
+       <div id="opening" class="section white">
         <script src="js/twitter.js"></script>
-        <img src="img/redcross.png" id="bg"/>
+        <img src="img/redcross.png" id="redcross"/>
         <h1>da Rescue Team</h1>
         <p class="motto"><span>Intensive care</span> for software</p>
         <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
@@ -32,13 +32,13 @@
         </div>
         <div class="pure-g-r">
         <div class="pure-u-1">
-            <div class="l-box statement">
+            <div class="l-box markdown">
                 <span id="typewriter" class="typewriter"></span>
                 <span class="caret">&nbsp;</span>
             </div>
         </div>
         <div class="pure-u-1">
-            <div class="l-box joy">
+            <div class="l-box statement">
             <p>The joy of <strong>testing</strong> and <strong>refactoring</strong></p>
             </div>
         </div>
@@ -155,14 +155,14 @@
         </div>
         <div class="pure-g-r">
         <div class="pure-u-1">
-            <div class="l-box joy motto">
+            <div class="l-box statement motto">
                
             </div>
            
         </div>
         <div class="pure-u-1">
-            <div class="l-box joy">
-            <p class="further">For further info, send us a <span class="badge">mail</span> to <span class="mail">darescueteam at gmail dot com<span></p>
+            <div class="l-box further">
+            <p>For further info, send us a <span class="badge">mail</span> to <span class="mail">darescueteam at gmail dot com<span></p>
             </div>
         </div>
         </div>
