css for other resolutions

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:200,300,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-   
-       <div id="opening" class="section white">
+    <div id="opening" class="section white">
         <script src="js/twitter.js"></script>
         <img src="img/redcross.png" id="redcross"/>
         <h1>da Rescue Team</h1>
         <p class="motto"><span>Intensive care</span> for software</p>
-        <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
-
+  
     </div>
     <div id="rescue" class="section dark">
     <div class="title">
@@ -129,7 +126,7 @@
             <h2>Hear what we say</h2>
         </div>
 
-
+         <a class="twitter-timeline"  href="https://twitter.com/daRescueTeam"  data-widget-id="396019933143769089"></a>
         <div class="pure-g-r" id="timeline">
             <div class="pure-u-1 center">
                 <div class="spinner"></div>
@@ -166,7 +163,9 @@
             </div>
         </div>
         </div>
-
+    </div>
+    <div class="footer dark">
+        Powered by <a href="http://www.becodemyfriend.com/" target="_blank">beCodeMyFriend</a> ~ Lovely crafted by <a href="https://twitter.com/hell03610" target="_blank">Emma</a>
     </div>
 
 
