--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
 var paragraphs = [];
 
 paragraphs[0] = "<p>We become the most <strong>concerned</strong> people with the problems.</p>"
-paragraphs[1] = "<p>We liaise shoulder by shoulder with <strong>managers</strong> and <strong>developers</strong>.</p>"
-paragraphs[2] = "<p>We love the <strong>business</strong> as much as the <strong>software</strong>.</p>"
+paragraphs[1] = "<p>We love the <strong>business</strong> as much as the <strong>software</strong>.</p>"
+paragraphs[2] = "<p>We liaise shoulder by shoulder with <strong>managers</strong> and <strong>developers</strong>.</p>"
 paragraphs[3] = "<p>We focus on <strong>delivery</strong>.</p>"
 paragraphs[4] = "<p>We cover the damaged areas with <strong>useful</strong> tests.</p>"
 paragraphs[5] = "<p>We drastically <strong>reduce</strong> the number of bugs.</p>"
 paragraphs[6] = "<p>We solve <strong>performance</strong> issues.</p>"
 paragraphs[7] = "<p>We <strong>train</strong> the current developers.</p>"
 paragraphs[8] = "<p>We provide <strong>extra</strong> availability.</p>"
-paragraphs[9] = "<p>We <strong>enjoy</strong> doing it.</p>"
+paragraphs[9] = "<p>We get back the project <strong>under control</strong></p>"
 
   document.addEventListener("DOMContentLoaded", function(event) {
         var motto = new Motto({paragraphs: paragraphs});
