--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ paragraphs[5] = "<p>We drastically <strong>reduce</strong> the number of bugs.</
 paragraphs[6] = "<p>We solve <strong>performance</strong> issues.</p>"
 paragraphs[7] = "<p>We <strong>train</strong> the current developers.</p>"
 paragraphs[8] = "<p>We provide <strong>extra</strong> availability.</p>"
-paragraphs[9] = "<p>We get back the project <strong>under control</strong></p>"
+paragraphs[9] = "<p>We get back the project <strong>under control</strong>.</p>"
 
   document.addEventListener("DOMContentLoaded", function(event) {
         var motto = new Motto({paragraphs: paragraphs});
